--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <m-header [title]="'Course Registration System'"
-          [features]="['View and Modify Schedule']">
+          [features]="['View and Modify Schedule','Error Table','Version Saving and Comparison']">
 </m-header>
+
 <router-outlet></router-outlet>
 <div class="footer">Designed by: Mohammad Nizar, Osama Namroud and Mohammed Al-Hadeethi</div>
 
