--- a/src/app/features/feature3/feature3.component.html
+++ b/src/app/features/feature3/feature3.component.html
@@ -1,4 +1,14 @@
 <m-container>
     <br><br>
+<br>
+<div><m-card [header]="'Version Saving and Comparison'" [subheader]="'Compare schedules by selecting two from the drop down list'" >
+  <br><br>
+  <h3>Select Schedule Versions to Compare</h3>
+              <div class="pure-control-group">
+                <label for="schedule"> Schedule 1 </label>
 
+            </div>
+
+</m-card>
+  </div>
   </m-container>
