--- a/src/app/m-framework/components/m-card/m-card.component.html
+++ b/src/app/m-framework/components/m-card/m-card.component.html
@@ -1,8 +1,8 @@
 <div style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" class="cardstyle posts pure-u-1-1">
     <section class="post">
         <header class="post-header">
-            <h1 class="post-title" style="color: #e63946;"> {{header}}    </h1>
-            <h3 class="post-meta" style="font-style:italic; color: #e63946;">  {{subheader}} </h3>
+            <h1 class="post-title" style="color: #555455" style="width: 300px; margin: 0 auto;"> {{header}}    </h1>
+            <h3 class="post-meta" style="font-style:italic; color: #2236a7; " style="width: 300px; margin: 0 auto;">  {{subheader}} </h3>
         </header>
         <div class="post-description" style="font-size: 16px; text-align:justify">
             <ng-content></ng-content> 
