--- a/src/app/m-framework/components/m-header/m-header.component.html
+++ b/src/app/m-framework/components/m-header/m-header.component.html
@@ -4,7 +4,7 @@
             <img src="../../assets/logo2.png" alt="Logo" width="200">
           </div>
         <p class="logo-title pure-menu-heading"> {{title}}</p>
-        <div>
+        <div style="width: 100px; margin-left: 1250px;">
             <ul class="pure-menu-list">
                 <li class="pure-menu-item"> <a href="" class="pure-menu-link">{{homename}}</a></li>
                 <li *ngFor="let feature of features" class="pure-menu-item"> 
