--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
-* {
+@import "tailwindcss";
+* 
+{
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -7,7 +9,7 @@
 body {
     line-height: 1.7em;
     font-size: 13px;
-    background-color: white;
+    background-color:  rgb(158, 157, 157);
     color: rgb(12,35,64);
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -16,7 +18,7 @@ p {
     font-size:20px;
 }
 .pure-menu{
-    background-color: white;
+    background-color:  rgb(158, 157, 157);
 }
 
 h1,
@@ -91,7 +93,7 @@ label {
 }
 
 a.pure-button-primary {
-    background: white;
+    background: rgba(255, 254, 254, 0.226);
     color: #1f8dd6;
     border-radius: 5px;
     font-size: 120%;
@@ -101,7 +103,7 @@ a.pure-button-primary {
 
 .home-menu {
     text-align: center;
-    background: rgb(238,39,55);
+    background: rgb(66, 38, 165);
 }
 
 .pure-menu-link{
@@ -109,7 +111,7 @@ a.pure-button-primary {
 }
 
 .home-menu .pure-menu-heading {
-    color: white;  
+    color: rgb(253, 252, 252);  
     font-size: 220%;
     font-family: Arial, Helvetica, sans-serif;
     
@@ -120,7 +122,7 @@ a.pure-button-primary {
 }
 
 .home-menu a {
-    color: white;
+    color: rgb(255, 255, 255);
 }
 .home-menu li a:hover,
 .home-menu li a:focus {
@@ -138,7 +140,7 @@ a.pure-button-primary {
     width: 100%;
     min-height: 12%;
     z-index: 2;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
 
 
 }
@@ -146,7 +148,7 @@ a.pure-button-primary {
 /* We want to give the content area some more padding */
 .content {
     padding: 1em 1em 3em;
-    background-color: white;
+    background-color: rgb(158, 157, 157);
 }
 
 /* This is the class used for the main content headers (<h2>) */
